# Sammie-Roto-2

./: PLAN_sammie_fork_v2.md  pyproject.toml  sammie_main.py
sammie/: core.py  gui_widgets.py  matting.py  removal.py  sammie.py  settings_manager.py  workers.py
tests/: test_draggable_points.py  test_workers.py
