[project]
name = "Sammie-Roto-2"
version = "2.3.4.a1"
description = "Sammie Roto 2 application"
requires-python = ">=3.10"

dependencies = [
    "opencv-python~=4.12",
    "PySide6-essentials==6.9.3",
    "hydra-core~=1.3.2",
    "av~=15.1",
    "requests~=2.32",
    "tqdm~=4.67",
    "OpenEXR~=3.4",
    "diffusers~=0.35",
    "accelerate~=1.11",
    "einops",
]

[project.optional-dependencies]
cpu   = ["torch==2.11.0", "torchvision==0.26.0"]
cu126 = ["torch==2.11.0", "torchvision==0.26.0"]
cu130 = ["torch==2.11.0", "torchvision==0.26.0"]
rocm  = [
    "torch==2.11.0 ; sys_platform == 'linux'",
    "torchvision==0.26.0 ; sys_platform == 'linux'",
    "triton-rocm==3.6.0 ; sys_platform == 'linux'"
]
xpu   = ["torch==2.11.0", "torchvision==0.26.0", "triton-xpu==3.7.0"]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu130" },
    { extra = "rocm" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-xpu",   extra = "xpu" },
  { index = "pytorch-cpu",   extra = "cpu" },
]
torchvision = [
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'"  },
  { index = "pytorch-xpu",   extra = "xpu" },
  { index = "pytorch-cpu",   extra = "cpu" },
]
triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-xpu = [
  { index = "pytorch-xpu" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
